\name{NEWS}
\title{NEWS file for the TraMineRextras package}

\section{Changes in version 0.5.4 [2018-10-02] (Development version)}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item
      No changes
    }
  }

  \subsection{Bug fixes}{
    \itemize{
      \item
      \code{seqsurv()}: levels of spell$states were not ordered conformably with the alphabet of the state sequence object, which caused \code{plot.ststlist.surv} to use wrong colors for the survival curves when \code{per.state=FALSE}.
      \code{seqsplot()}: color synchronization failed with \code{per.state=FALSE} when one of the states selected was unobserved in one of the groups.
    }
  }

}


\section{Changes in version 0.4.3 [2018-08-22]}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item
      \code{seqsplot()} now supports the \code{ncol} argument for controlling the number of columns in the color legend.
      \item
      \code{plot.stslist.surv()}, \code{seqplot.tentrop()}, , \code{seqplot.tentrop.m()}, \code{plot.seqimplic()}, \code{print.seqimplic()}: new argument \code{tick.last} that when set as \code{TRUE} allows to enforce a tick mark at the last position on the time x-axis. Has no effect when the last position is 1 + a multiple of \code{xtstep}. Default is to use the \code{tick.last} attribute of the state sequence object.
      \item
      \code{seqrep.grp()}: an error is raised when one of the groups has less than two cases.
    }
  }
  \subsection{Bug fixes}{
    \itemize{
      \item{Function \code{seqgen.missing()} the number of left and right
        elements to be turned into missings were inverted.}
    }
  }
  \subsection{Misc}{
    \itemize{
      \item{Function \code{seqeordplot()} suppressed. It is superseded by the
       function \code{seqpcplot()} of the TraMineR package.}
    }
  }
}

\section{Changes in version 0.4.2 [2018-02-01]}{
  \subsection{New functions}{
    \itemize{
      \item